[package]
name = "x64"
version = "0.16.2"
edition = "2021"
rust-version = "1.70"
authors = [
    # Original x86_64 crate authors - thank you for your incredible work!
    "Philipp Oppermann <dev@phil-opp.com>",
    "Gerd Zellweger <mail@gerdzellweger.com>",
    "Eric Kidd <git@randomhacks.net>",
    "Dan Schatzberg <schatzberg.dan@gmail.com>",
    "John Ericson <John_Ericson@Yahoo.com>",
    "Rex Lunae <rexlunae@gmail.com>",
    # LA57 support added by:
    "LunaOS Contributors",
]
description = "x86_64 support with LA57 (5-level paging) for 57-bit virtual addresses"
documentation = "https://docs.rs/x64"
homepage = "https://github.com/artst3in/x64"
repository = "https://github.com/artst3in/x64"
keywords = ["amd64", "x86_64", "no_std", "la57", "paging"]
categories = ["no-std", "hardware-support", "os"]
license = "MIT OR Apache-2.0"
readme = "README.md"

# This crate is a fork of rust-osdev/x86_64 with LA57 (5-level paging) support.
# Original: https://github.com/rust-osdev/x86_64
# We are deeply grateful to Philipp Oppermann and all contributors for their
# foundational work on OS development in Rust.

[dependencies]
bit_field = "0.10.1"
bitflags = "2.3.2"
volatile = "0.4.4"
rustversion = "1.0.5"
dep_const_fn = { package = "const_fn", version = "0.4.11" }

[features]
default = ["nightly", "instructions"]
instructions = []
memory_encryption = []
nightly = ["const_fn", "step_trait", "abi_x86_interrupt", "asm_const"]
abi_x86_interrupt = []
asm_const = []
step_trait = []
doc_cfg = []

# These are deprecated and no longer needed:
const_fn = []
doc_auto_cfg = []

[package.metadata.docs.rs]
all-features = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
